<resources>
    <string name="app_name" translatable="false">Aplicacion de registro</string>
    <string name="mensajeBienvenida" translatable="false">Registro</string>
    <string name="MensajeBoton" translatable="false">Boton</string>
    <string name="IdProducto" translatable="false">ID del producto</string>
    <string name="conceptoProducto" translatable="false">Concepto</string>
    <string name="ValorProducto" translatable="false">Valor(MXN)</string>
    <string name="IngresoProducto" translatable="false">Ingreso</string>
    <string name="IngresarBoton" translatable="false">Registrar en Firebase</string>
    <string name="PlaceholderConcepto" translatable="false">Descripción</string>
    <string name="BotonSugarORM" translatable="false">Registrar en SugarORM</string>
</resources>
